# libgwyfile

./: .gitignore  AUTHORS  COPYING  Makefile.am  Makefile.in  NEWS  README  autogen.sh  config.h.in  configure  configure.ac  gwy.vcxproj  premake5.lua
examples/: Makefile.am  Makefile.in  checkgeneric.c  client.c  clientserver.h  readgeneric.c  readgwy.c  server.c  writegeneric.c  writegwy.c
lib/: Doxyfile  Makefile.am  Makefile.in  filter-out-attrs.sed  filter-out-attrs.sh  gwyfile.c  gwyfile.c.orig  gwyfile.def  gwyfile.h  gwyfile.h.orig  gwyfile.pc.in  gwyfile.vim
msvc2015/: libgwyfile.sln
msvc2015/gwyfiletest/: gwyfiletest.vcxproj  gwyfiletest.vcxproj.filters
msvc2015/libgwyfile/: libgwyfile.vcxproj  libgwyfile.vcxproj.filters
test/: Makefile.am  Makefile.in  check_double_inf.c  check_double_nan.c  check_empty_name.c  check_identifier_type.c  check_utf8_name.c  check_utf8_string.c  check_utf8_type.c  common.h  file_basic_types.c  file_error_arraysize.c  file_error_confinement_array1.c  file_error_confinement_name1.c  file_error_confinement_name2.c  file_error_confinement_object.c  file_error_duplicatename.c  file_error_itemtype.c  file_error_magic.c  file_error_toodeepnesting.c  file_error_truncated_object.c  item_char_array_const_const.c  item_char_array_const_setcopy.c  item_char_array_const_setowned.c  item_char_array_copy_owned.c  item_char_array_copy_take.c  item_char_array_owned_owned.c  item_char_array_owned_setconst.c  item_double_array_const_const.c  item_double_array_const_setcopy.c  item_double_array_const_setowned.c  item_double_array_copy_owned.c  item_double_array_copy_take.c  item_double_array_owned_owned.c  item_double_array_owned_setconst.c  item_int32_array_const_const.c  item_int32_array_const_setcopy.c  item_int32_array_const_setowned.c  item_int32_array_copy_owned.c  item_int32_array_copy_take.c  (+120 more)
